--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/white-logo.png" />
-    <link rel="apple-touch-icon" href="/src/assets/white-logo.png" />
+    <link rel="icon" type="image/png" href="/src/assets/color-logo.png" />
+    <link rel="apple-touch-icon" href="/src/assets/color-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Meta Tags -->
